--- a/admin/website-angular/src/assets/i18n/he.json
+++ b/admin/website-angular/src/assets/i18n/he.json
@@ -843,6 +843,14 @@
 			"CONTACT_PHONE": "צור קשר עם הטלפון",
 			"FIRST_NAME": "שם פרטי",
 			"LAST_NAME": "שם משפחה"
+		},
+		"CREATE": {
+			"BASIC_INFO": "מידע בסיסי",
+			"LOCATION": "מקום"
+		},
+		"TRACK": {
+			"TRACK_ALL_WORKING_CARRIERS": "עקוב אחר כל ספקי השירות",
+			"FILTER_CARRIERS": "מסנני מסננים"
 		}
 	},
 	"PRODUCT_TYPE_VIEW": {
