--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -840,6 +840,14 @@
 			"CONTACT_PHONE": "Контактный телефон",
 			"FIRST_NAME": "Имя",
 			"LAST_NAME": "Фамилия"
+		},
+		"CREATE": {
+			"BASIC_INFO": "Базовая информация",
+			"LOCATION": "Место нахождения"
+		},
+		"TRACK": {
+			"TRACK_ALL_WORKING_CARRIERS": "Отслеживание всех работающих перевозчиков",
+			"FILTER_CARRIERS": "Фильтр-носители"
 		}
 	},
 	"PRODUCT_TYPE_VIEW": {
