--- a/admin/website-angular/src/assets/i18n/he.json
+++ b/admin/website-angular/src/assets/i18n/he.json
@@ -779,6 +779,7 @@
 		"CREATE_BUTTON": "צור",
 		"ACTIVE_AND_AVAILABLE_ORDERS": "הזמנות זמינות וזמינות",
 		"ORDERS_HISTORY": "היסטוריה",
+		"TRACK": "לעקוב",
 		"SMART_TABLE_COLUMNS": {
 			"IMAGE": "תמונה",
 			"NAME": "שם",
@@ -848,7 +849,7 @@
 			"BASIC_INFO": "מידע בסיסי",
 			"LOCATION": "מקום"
 		},
-		"TRACK": {
+		"TRACK_PAGE": {
 			"TRACK_ALL_WORKING_CARRIERS": "עקוב אחר כל ספקי השירות",
 			"FILTER_CARRIERS": "מסנני מסננים"
 		}
