--- a/admin/website-angular/src/assets/i18n/bg.json
+++ b/admin/website-angular/src/assets/i18n/bg.json
@@ -277,7 +277,22 @@
 			},
 			"PAYMENTS": {
 				"PAYMENTS": "Плащания",
-				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?"
+				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?",
+				"STRIPE": {
+					"PAY_BUTTON_TEXT": "Текст на бутона за плащане",
+					"CURRENCY": "Валута",
+					"PAY_BUTTON_TEXT_IS_REQUIRED": "Изисква се текст на бутон за плащане",
+					"CHOOSE_CURRENCY_CODE": "Изберете кода на валутата",
+					"CURRENCY_TEXT_IS_REQUIRED": "Изберете кода на валутата",
+					"COMPANY_BRAND_LOGO": "Лого на фирмената марка",
+					"COMPANY_BRAND_LOGO_IS_REQUIRED": "Изисква се лого на фирмената марка",
+					"INVALID_LOGO_URL": "Невалиден URL адрес на логото",
+					"INVALID_LOGO": "Невалидно лого",
+					"PUBLISHABLE_KEY": "Публикуван ключ",
+					"PUBLISHABLE_KEY_IS_REQUIRED": "Изисква се издателски ключ",
+					"ALLOW_REMEMBER_ME": "Нека ме запамети?",
+					"REMOVE": "Премахни"
+				}
 			},
 			"MANUFACTURING": {
 				"MANUFACTURING": "Производство",
