--- a/admin/website-angular/src/assets/i18n/ru.json
+++ b/admin/website-angular/src/assets/i18n/ru.json
@@ -276,7 +276,22 @@
 			},
 			"PAYMENTS": {
 				"PAYMENTS": "Плащания",
-				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?"
+				"ALLOW_ONLINE_PAYMENT": "Разрешаване на онлайн плащания?",
+				"STRIPE": {
+					"PAY_BUTTON_TEXT": "Текст кнопки оплаты",
+					"CURRENCY": "валюта",
+					"PAY_BUTTON_TEXT_IS_REQUIRED": "Текст кнопки оплаты требуется",
+					"CHOOSE_CURRENCY_CODE": "Выберите код валюты",
+					"CURRENCY_TEXT_IS_REQUIRED": "Текст валюты требуется",
+					"COMPANY_BRAND_LOGO": "Логотип бренда компании",
+					"COMPANY_BRAND_LOGO_IS_REQUIRED": "Требуется логотип компании",
+					"INVALID_LOGO_URL": "Неверный URL-адрес логотипа",
+					"INVALID_LOGO": "Неверный логотип",
+					"PUBLISHABLE_KEY": "Публикуемый ключ",
+					"PUBLISHABLE_KEY_IS_REQUIRED": "Требуется публикуемый ключ",
+					"ALLOW_REMEMBER_ME": "Разрешить запомнить меня?",
+					"REMOVE": "Удалить"
+				}
 			},
 			"MANUFACTURING": {
 				"MANUFACTURING": "Производство",
