Feature/ban user (#541)
* feat(ever-admin): basic impplementation done

* feat(ever-admin): first implementation done, expecting feedback

* refactor(ever-admin): cleaned up code

* refactor(ever-admin): missed a console.error

* refactor(ever-admin): missed a console.error

--- a/admin/website-angular/src/assets/i18n/en.json
+++ b/admin/website-angular/src/assets/i18n/en.json
@@ -706,6 +706,8 @@
 		"CREATE_CUSTOMER": "Create",
 		"DELETE": "DELETE",
 		"CREATE": "CREATE",
+		"BAN": "BAN",
+		"UNBAN": "UNBAN",
 		"MANAGE_CUSTOMER": "Manage customer",
 		"CUSTOMER": "Customer",
 		"CUSTOMERS_DEVICES": "Devices",
