fix: in main menu "Legals" section renamed to "Legal"

--- a/shop/mobile-ionic/src/assets/i18n/en-US.json
+++ b/shop/mobile-ionic/src/assets/i18n/en-US.json
@@ -176,7 +176,7 @@
 				}
 			},
 			"LEGALS": {
-				"DIVER_TITLE": "LEGALS",
+				"DIVER_TITLE": "LEGAL",
 				"ITEMS": {
 					"TERMS_OF_USE": "Terms of Use",
 					"PRIVACY": "Privacy"
