--- a/shop/mobile-ionic/src/assets/i18n/he-IL.json
+++ b/shop/mobile-ionic/src/assets/i18n/he-IL.json
@@ -228,5 +228,11 @@
 	"FAILED": "נכשל",
 	"CANCELED": "מבוטל",
 	"IN_DELIVERY": "במשלוח",
-	"COMPLETED": "הושלם"
+	"COMPLETED": "הושלם",
+	"BROWSE": "לְדַפדֵף",
+	"ENGLISH": "אנגלית",
+	"HEBREW": "עִברִית",
+	"RUSSIAN": "רוּסִי",
+	"BULGARIAN": "בולגרית",
+	"SELECT": "בחר"
 }
