--- a/shop/mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/shop/mobile-ionic/src/assets/i18n/ru-RU.json
@@ -227,5 +227,11 @@
 	"FAILED": "Не удалось",
 	"CANCELED": "Отменен",
 	"IN_DELIVERY": "В доставке",
-	"COMPLETED": "Завершенный"
+	"COMPLETED": "Завершенный",
+	"BROWSE": "ПРОСМАТРИВАТЬ",
+	"ENGLISH": "Английский",
+	"HEBREW": "Иврит",
+	"RUSSIAN": "Русский",
+	"BULGARIAN": "Болгарский",
+	"SELECT": "Выбрать"
 }
