--- a/carrier/mobile-ionic/src/assets/i18n/en.json
+++ b/carrier/mobile-ionic/src/assets/i18n/en.json
@@ -75,7 +75,8 @@
 		"ENGLISH": "English",
 		"BULGARIAN": "Bulgarian",
 		"HEBREW": "Hebrew",
-		"RUSSIAN": "Rusian"
+		"RUSSIAN": "Rusian",
+		"SPANISH": "Spanish"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "You navigated here from"
