--- a/carrier/mobile-ionic/src/assets/i18n/he.json
+++ b/carrier/mobile-ionic/src/assets/i18n/he.json
@@ -75,7 +75,8 @@
 		"ENGLISH": "אנגלית",
 		"BULGARIAN": "בולגרית",
 		"HEBREW": "עברית",
-		"RUSSIAN": "רוסית"
+		"RUSSIAN": "רוסית",
+		"SPANISH": "ספרדית"
 	},
 	"LIST_VIEW": {
 		"YOU_NAVIGATED_HERE_FROM": "אתה מנווט כאן מ"
