feat: fixes to the es-ES.json to the shop mobile

--- a/shop/mobile-ionic/src/assets/i18n/es-ES.json
+++ b/shop/mobile-ionic/src/assets/i18n/es-ES.json
@@ -1,17 +1,11 @@
-
 {
-	"LANGUAGE_VIEW": {
-		"TITLE": "Seleccione el idioma"
-	},
 	"BROWSE": "Vistazo",
 	"ENGLISH": "Inglés",
 	"HEBREW": "Hebreo",
 	"RUSSIAN": "Ruso",
 	"BULGARIAN": "Búlgaro",
 	"SPANISH": "Español",
-	"SELECT": "Seleccione"
-}
-{
+	"SELECT": "Seleccione",
 	"LANGUAGE": {
 		"ID": "es-ES",
 		"NAME": "Español"
