feat: added Spanish language to product mutation Merchant-app #1024

--- a/merchant/tablet-ionic/src/assets/i18n/bg-BG.json
+++ b/merchant/tablet-ionic/src/assets/i18n/bg-BG.json
@@ -353,7 +353,8 @@
 		"ENGLISH": "Английски",
 		"HEBREW": "Иврит",
 		"RUSSIAN": "Руски",
-		"BULGARIAN": "Български"
+		"BULGARIAN": "Български",
+		"SPANISH": "Испански"
 	},
 	"ORDER_CANCELED_COMPONENT": {
 		"CANCELED": "Отменен",
