--- a/merchant/tablet-ionic/src/assets/i18n/en-US.json
+++ b/merchant/tablet-ionic/src/assets/i18n/en-US.json
@@ -354,6 +354,7 @@
 		"HEBREW": "Hebrew",
 		"RUSSIAN": "Russian",
 		"BULGARIAN": "Bulgarian",
+		"SPANISH": "Spanish",
 		"OPTIONAL": "optional"
 	},
 	"ORDER_CANCELED_COMPONENT": {
