--- a/merchant/tablet-ionic/src/assets/i18n/es-ES.json
+++ b/merchant/tablet-ionic/src/assets/i18n/es-ES.json
@@ -364,6 +364,7 @@
 		"RUSSIAN": "Ruso",
 		"BULGARIAN": "Bulgaro",
 		"ESPAÑOL": "Español",
+		"SPANISH": "Español",
 		"OPTIONAL": "Opcional"
 	},
 	"ORDER_CANCELED_COMPONENT": {
