--- a/merchant/tablet-ionic/src/assets/i18n/he-IL.json
+++ b/merchant/tablet-ionic/src/assets/i18n/he-IL.json
@@ -354,7 +354,8 @@
 		"ENGLISH": "אנגלית",
 		"HEBREW": "עִברִית",
 		"RUSSIAN": "רוּסִי",
-		"BULGARIAN": "בולגרית"
+		"BULGARIAN": "בולגרית",
+		"SPANISH": "ספרדית"
 	},
 	"ORDER_CANCELED_COMPONENT": {
 		"CANCELED": "מבוטל",
