--- a/merchant/tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/merchant/tablet-ionic/src/assets/i18n/ru-RU.json
@@ -354,7 +354,8 @@
 		"ENGLISH": "Английский",
 		"HEBREW": "Иврит",
 		"RUSSIAN": "Русский",
-		"BULGARIAN": "Болгарский"
+		"BULGARIAN": "Болгарский",
+		"SPANISH": "Испанский"
 	},
 	"ORDER_CANCELED_COMPONENT": {
 		"CANCELED": "отменен",
