feat: added notification for cancel order shop-mobile #1027

--- a/shop/mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/shop/mobile-ionic/src/assets/i18n/bg-BG.json
@@ -78,6 +78,15 @@
 	},
 	"BUY_POPUP": {
 		"ORDER_PAID": "Поръчката е платена $",
+		"CANCEL": {
+			"STATUSES": [
+				{
+					"TITLE": "Поръчката беше анулирана по време на подготовката на склада!",
+					"DETAILS": "",
+					"NOT_PAID_NOTE": ""
+				}
+			]
+		},
 		"STATUSES": [
 			{
 				"TITLE": "Подготвяме поръчката!",
