--- a/shop/mobile-ionic/src/assets/i18n/he-IL.json
+++ b/shop/mobile-ionic/src/assets/i18n/he-IL.json
@@ -78,6 +78,15 @@
 	},
 	"BUY_POPUP": {
 		"ORDER_PAID": "ההזמנה משולמת $",
+		"CANCEL": {
+			"STATUSES": [
+				{
+					"TITLE": "ההזמנה בוטלה תוך כדי הכנת מחסן!",
+					"DETAILS": "",
+					"NOT_PAID_NOTE": ""
+				}
+			]
+		},
 		"STATUSES": [
 			{
 				"TITLE": "אנחנו מכינים את ההזמנה!",
