--- a/shop/mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/shop/mobile-ionic/src/assets/i18n/ru-RU.json
@@ -78,6 +78,15 @@
 	},
 	"BUY_POPUP": {
 		"ORDER_PAID": "Заказ оплачен $",
+		"CANCEL": {
+			"STATUSES": [
+				{
+					"TITLE": "Заказ был отменен при подготовке склада!",
+					"DETAILS": "",
+					"NOT_PAID_NOTE": ""
+				}
+			]
+		},
 		"STATUSES": [
 			{
 				"TITLE": "Мы готовим Ваш заказ!",
