feat: #1036/translate show on map button

--- a/admin/website-angular/src/assets/i18n/bg-BG.json
+++ b/admin/website-angular/src/assets/i18n/bg-BG.json
@@ -378,6 +378,7 @@
 		"DELETE_WAREHOUSES": "Изтрий Селектирани",
 		"DELETE": "Изтрий",
 		"CREATE": "създавам",
+		"SHOW_ON_MAP": "Покажи на карта",
 		"SMART_TABLE_COLUMNS": {
 			"IMAGE": "Изображение",
 			"NAME": "Име",
