--- a/admin/website-angular/src/assets/i18n/es-ES.json
+++ b/admin/website-angular/src/assets/i18n/es-ES.json
@@ -381,6 +381,7 @@
 		"DELETE_WAREHOUSES": "Eliminar Seleccionadas",
 		"DELETE": "ELIMINAR",
 		"CREATE": "CREAR",
+		"SHOW_ON_MAP": "Mostrar en el mapa",
 		"SMART_TABLE_COLUMNS": {
 			"IMAGE": "Imágen",
 			"NAME": "Nombre",
