--- a/admin/website-angular/src/assets/i18n/es-ES.json
+++ b/admin/website-angular/src/assets/i18n/es-ES.json
@@ -396,6 +396,13 @@
 			"STORE_INFO": "Información de Sucursal",
 			"STORE_ID": "ID de Sucursal",
 			"STORE_NAME": "Nombre de Sucursal"
+		},
+		"MERCHANTS": {
+			"TRACK_ALL_MERCHANTS": "Rastrear a todas las comerciantes",
+			"FILTER_MERCHANTS": "Filtrar comerciantes",
+			"FILTER_BY_NAME": "Filtrar por nombre",
+			"FILTER_BY_CITY": "Filtrar por ciudad",
+			"FILTER_BY_COUNTRY": "Filtrar por país"
 		}
 	},
 	"WAREHOUSE_VIEW": {
