--- a/admin/website-angular/src/assets/i18n/he-IL.json
+++ b/admin/website-angular/src/assets/i18n/he-IL.json
@@ -393,6 +393,13 @@
 			"STORE_INFO": "מידע חנות",
 			"STORE_ID": "מזהה חנות",
 			"STORE_NAME": "שם חנות"
+		},
+		"MERCHANTS": {
+			"TRACK_ALL_MERCHANTS": "עקוב אחר כל הסוחרים",
+			"FILTER_MERCHANTS": "סוחרי סינון",
+			"FILTER_BY_NAME": "לסנן לפי שם",
+			"FILTER_BY_CITY": "סנן לפי עיר",
+			"FILTER_BY_COUNTRY": "סנן לפי מדינה"
 		}
 	},
 	"WAREHOUSE_VIEW": {
