fix: language translation in mobile shop

--- a/shop/mobile-ionic/src/assets/i18n/en-US.json
+++ b/shop/mobile-ionic/src/assets/i18n/en-US.json
@@ -206,7 +206,7 @@
 		]
 	},
 	"MERCHANTS_VIEW": {
-		"CLOSE_TO_YOU": "MERCHANTS CLOSE TO YOU",
+		"CLOSE_TO_YOU": "Merchants close to you",
 		"NAME": "Merchant name",
 		"WITH_NAME": "Merchants with name"
 	},
