fix: added translation into store management page labels

--- a/admin/website-angular/src/assets/i18n/bg-BG.json
+++ b/admin/website-angular/src/assets/i18n/bg-BG.json
@@ -370,6 +370,7 @@
 			"ACCOUNT": "Сметка",
 			"CONTACT_INFO": "Информация за контакт",
 			"LOCATION": "Местоположение",
+			"PAYMENT": "Плащане",
 			"DELIVERY_ZONES": "Зони за доставка"
 		}
 	},
