--- a/admin/website-angular/src/assets/i18n/en-US.json
+++ b/admin/website-angular/src/assets/i18n/en-US.json
@@ -370,6 +370,7 @@
 			"ACCOUNT": "Account",
 			"CONTACT_INFO": "Contact Info",
 			"LOCATION": "Location",
+			"PAYMENT": "Payment",
 			"DELIVERY_ZONES": "Delivery zones"
 		}
 	},
