--- a/admin/website-angular/src/assets/i18n/es-ES.json
+++ b/admin/website-angular/src/assets/i18n/es-ES.json
@@ -373,6 +373,7 @@
 			"ACCOUNT": "Cuenta",
 			"CONTACT_INFO": "Información de Contacto",
 			"LOCATION": "Ubicación",
+			"PAYMENT": "Pago",
 			"DELIVERY_ZONES": "Zonas de entrega"
 		}
 	},
