--- a/admin/website-angular/src/assets/i18n/he-IL.json
+++ b/admin/website-angular/src/assets/i18n/he-IL.json
@@ -370,6 +370,7 @@
 			"ACCOUNT": "חֶשְׁבּוֹן",
 			"CONTACT_INFO": "פרטים ליצירת קשר",
 			"LOCATION": "מקום",
+			"PAYMENT": "תשלום",
 			"DELIVERY_ZONES": "אזורי אספקה"
 		}
 	},
