--- a/admin/website-angular/src/assets/i18n/ru-RU.json
+++ b/admin/website-angular/src/assets/i18n/ru-RU.json
@@ -370,6 +370,7 @@
 			"ACCOUNT": "Счет",
 			"CONTACT_INFO": "Контактная информация",
 			"LOCATION": "Место нахождения",
+			"PAYMENT": "Оплата",
 			"DELIVERY_ZONES": "Зоны доставки"
 		}
 	},
