feat: new order popup translation

--- a/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
@@ -265,6 +265,7 @@
 			"NO_PRODUCTS": "Няма продукти"
 		},
 		"CREATE_PRODUCTS_POPUP": {
+			"ERROR_MSG": "Нещо не е наред, не можете да направите поръчка!",
 			"NEW_PRODUCT_TYPE": "Нов тип продукт",
 			"CREATE_NEW_PRODUCT_TYPE": "Създай нов продукт",
 			"TITLE": "Заглавие",
