--- a/packages/merchant-tablet-ionic/src/assets/i18n/en-US.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/en-US.json
@@ -265,6 +265,7 @@
 			"NO_PRODUCTS": "No Products"
 		},
 		"CREATE_PRODUCTS_POPUP": {
+			"ERROR_MSG": "Something is wrong, unable to place order!",
 			"NEW_PRODUCT_TYPE": "New Product Type",
 			"CREATE_NEW_PRODUCT_TYPE": "Create a new product type",
 			"TITLE": "Title",
