--- a/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/es-ES.json
@@ -268,6 +268,7 @@
 			"NO_PRODUCTS": "No hay Productos"
 		},
 		"CREATE_PRODUCTS_POPUP": {
+			"ERROR_MSG": "¡Algo está mal, no se puede hacer el pedido!",
 			"NEW_PRODUCT_TYPE": "Nuevo Tipo de Producto",
 			"CREATE_NEW_PRODUCT_TYPE": "Crear Nuevo Tipo de Producto",
 			"TITLE": "Nombre",
