--- a/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/ru-RU.json
@@ -266,6 +266,7 @@
 			"NO_PRODUCTS": "Нет продуктов"
 		},
 		"CREATE_PRODUCTS_POPUP": {
+			"ERROR_MSG": "Что-то не так, не в состоянии разместить заказ!",
 			"NEW_PRODUCT_TYPE": "Новый тип продукта",
 			"CREATE_NEW_PRODUCT_TYPE": "Создать новый тип продукта",
 			"TITLE": "Заглавие",
