feat: added translations on track order popup

--- a/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/merchant-tablet-ionic/src/assets/i18n/bg-BG.json
@@ -75,7 +75,13 @@
 			"ADDRESS": "Адрес",
 			"LOGO": "Лого"
 		},
+		"TRACK_ORDER": "Проследяване на поръчка",
 		"TRACK_CARRIER": "Проследяване на доставчика",
+		"DELIVERY_TRACKING": "Проследяване на доставките",
+		"CARRIER": "Доставчик",
+		"STORE": "Магазин",
+		"DELIVERY_COUNT": "Брой на доставките:",
+		"CUSTOMER": "Клиент",
 		"CARRIERS": "Куриери",
 		"ADD_CARRIERS": "Добавяне на превозвачи",
 		"IMAGE": "Изображение",
