feat: add location notes field to database

--- a/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
@@ -243,5 +243,6 @@
 	"HEBREW": "Иврит",
 	"RUSSIAN": "Руски",
 	"BULGARIAN": "Български",
-	"SELECT": "Изберете"
+	"SELECT": "Изберете",
+	"LOCATION_NOTES": "Бележки за местоположението"
 }
