--- a/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
@@ -244,5 +244,6 @@
 	"RUSSIAN": "Russian",
 	"BULGARIAN": "Bulgarian",
 	"SPANISH": "Spanish",
-	"SELECT": "Select"
+	"SELECT": "Select",
+	"LOCATION_NOTES": "Location Notes"
 }
