--- a/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
@@ -244,5 +244,6 @@
 	"FAILED": "Error",
 	"CANCELED": "Cancelado",
 	"IN_DELIVERY": "En viaje",
-	"COMPLETED": "Completado"
+	"COMPLETED": "Completado",
+	"LOCATION_NOTES": "Notas de ubicación"
 }
