--- a/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
@@ -242,5 +242,6 @@
 	"HEBREW": "Иврит",
 	"RUSSIAN": "Русский",
 	"BULGARIAN": "Болгарский",
-	"SELECT": "Выбрать"
+	"SELECT": "Выбрать",
+	"LOCATION_NOTES": "Примечания о местонахождении"
 }
