--- a/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
@@ -243,5 +243,6 @@
 	"HEBREW": "עִברִית",
 	"RUSSIAN": "רוּסִי",
 	"BULGARIAN": "בולגרית",
-	"SELECT": "בחר"
+	"SELECT": "בחר",
+	"LOCATION_NOTES": "הערות מיקום"
 }
