fix: added notes placeholder translation

--- a/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/bg-BG.json
@@ -244,5 +244,6 @@
 	"RUSSIAN": "Руски",
 	"BULGARIAN": "Български",
 	"SELECT": "Изберете",
-	"LOCATION_NOTES": "Бележки за местоположението"
+	"LOCATION_NOTES": "Бележки за местоположението",
+	"ENTER_NOTES_HERE": "Въведете бележки тук"
 }
