--- a/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/en-US.json
@@ -245,5 +245,6 @@
 	"BULGARIAN": "Bulgarian",
 	"SPANISH": "Spanish",
 	"SELECT": "Select",
-	"LOCATION_NOTES": "Location Notes"
+	"LOCATION_NOTES": "Location Notes",
+	"ENTER_NOTES_HERE": "Enter notes here"
 }
