--- a/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/es-ES.json
@@ -245,5 +245,6 @@
 	"CANCELED": "Cancelado",
 	"IN_DELIVERY": "En viaje",
 	"COMPLETED": "Completado",
-	"LOCATION_NOTES": "Notas de ubicación"
+	"LOCATION_NOTES": "Notas de ubicación",
+	"ENTER_NOTES_HERE": "Introduce notas aquí"
 }
