--- a/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/he-IL.json
@@ -244,5 +244,6 @@
 	"RUSSIAN": "רוּסִי",
 	"BULGARIAN": "בולגרית",
 	"SELECT": "בחר",
-	"LOCATION_NOTES": "הערות מיקום"
+	"LOCATION_NOTES": "הערות מיקום",
+	"ENTER_NOTES_HERE": "הזן הערות כאן"
 }
