--- a/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
+++ b/packages/shop-mobile-ionic/src/assets/i18n/ru-RU.json
@@ -243,5 +243,6 @@
 	"RUSSIAN": "Русский",
 	"BULGARIAN": "Болгарский",
 	"SELECT": "Выбрать",
-	"LOCATION_NOTES": "Примечания о местонахождении"
+	"LOCATION_NOTES": "Примечания о местонахождении",
+	"ENTER_NOTES_HERE": "Введите примечания здесь"
 }
