fix: json values not displayed properly

--- a/packages/shop-web-angular/src/assets/i18n/bg-BG.json
+++ b/packages/shop-web-angular/src/assets/i18n/bg-BG.json
@@ -22,6 +22,7 @@
 		"TO_BE_INVITED_ALLOW_GPS": "За да бъдете поканени, позволете GPS."
 	},
 	"PRODUCTS_VIEW": {
+		"SEARCH_PRODUCTS": "напр. Пеперони Пица Суши...",
 		"PRODUCTS": "Продукти",
 		"ORDERS": "Поръчки",
 		"BUY_FOR": "Купи за",
