--- a/packages/shop-web-angular/src/assets/i18n/en-US.json
+++ b/packages/shop-web-angular/src/assets/i18n/en-US.json
@@ -23,6 +23,7 @@
 		"TO_BE_INVITED_ALLOW_GPS": "To be invited allow GPS."
 	},
 	"PRODUCTS_VIEW": {
+		"SEARCH_PRODUCTS": "e.g Pepperoni Pizza Sushi...",
 		"PRODUCTS": "Products",
 		"ORDERS": "Orders",
 		"BUY_FOR": "Buy for",
