--- a/packages/shop-web-angular/src/assets/i18n/ru-RU.json
+++ b/packages/shop-web-angular/src/assets/i18n/ru-RU.json
@@ -22,6 +22,7 @@
 		"TO_BE_INVITED_ALLOW_GPS": "Чтобы пригласить, разрешите GPS."
 	},
 	"PRODUCTS_VIEW": {
+		"SEARCH_PRODUCTS": "например, Пепперони Пицца Суши ...",
 		"PRODUCTS": "Продукты",
 		"ORDERS": "Поръчки",
 		"BUY_FOR": "Купить для",
