--- a/packages/shop-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/shop-web-angular/src/assets/i18n/es-ES.json
@@ -22,6 +22,7 @@
 		"TO_BE_INVITED_ALLOW_GPS": "Para ser invitado habilite GPS"
 	},
 	"PRODUCTS_VIEW": {
+		"SEARCH_PRODUCTS": "por ejemplo, Pizza Pepperoni Sushi ...",
 		"PRODUCTS": "Productos",
 		"ORDERS": "Pedidos",
 		"BUY_FOR": "Comprar por",
