--- a/packages/shop-web-angular/src/assets/i18n/he-IL.json
+++ b/packages/shop-web-angular/src/assets/i18n/he-IL.json
@@ -22,6 +22,7 @@
 		"TO_BE_INVITED_ALLOW_GPS": "כדי להיות מוזמן לאפשר GPS."
 	},
 	"PRODUCTS_VIEW": {
+		"SEARCH_PRODUCTS": "למשל פיצה פפרוני סושי ...",
 		"PRODUCTS": "מוצרים",
 		"ORDERS": "הזמנות",
 		"BUY_FOR": "לקנות ל",
