fix: #1148 delivery zones undefined name fix/translations

--- a/packages/admin-web-angular/src/assets/i18n/fr.json
+++ b/packages/admin-web-angular/src/assets/i18n/fr.json
@@ -88,6 +88,16 @@
 			"AUTO_DETECT_COORDINATES": "Détection automatique des coordonnées",
 			"CARRIERS": "Les transporteurs",
 			"USE_ONLY_SPECIFIC_CARRIERS": "N'utilisez que des transporteurs spécifiques",
+			"SELECT_SHAPE_TO_ADD_ZONE": "Sélectionnez la forme pour ajouter une nouvelle zone",
+			"CIRCLE": "Cercle",
+			"SHAPE": "Forme",
+			"DRAW_SHAPE_ON_MAP": "Dessinez une forme sur la carte",
+			"MINIMUM_AMOUNT": "Montant minimal",
+			"DELIVERY_FEE": "Frais de livraison",
+			"CANCEL": "Annuler",
+			"ADD": "Ajouter",
+			"EDIT": "Éditer",
+			"ZONE_NAME": "Nom de zone",
 			"ERRORS": {
 				"NAME_IS_REQUIRED": "Le nom de l'entrepôt est requis",
 				"NAME_ATLEAST_3_CHARS": "Le nom doit comporter au moins 3 caractères",
