--- a/packages/admin-web-angular/src/assets/i18n/es-ES.json
+++ b/packages/admin-web-angular/src/assets/i18n/es-ES.json
@@ -453,6 +453,16 @@
 			"AUTO_DETECT_COORDINATES": "Auto detectar coordenadas",
 			"CARRIERS": "Repartos",
 			"USE_ONLY_SPECIFIC_CARRIERS": "Usar sólo repartos específicos",
+			"SELECT_SHAPE_TO_ADD_ZONE": "Seleccione forma para agregar una nueva zona",
+			"CIRCLE": "Circulo",
+			"SHAPE": "Forma",
+			"DRAW_SHAPE_ON_MAP": "Dibuja una forma en el mapa",
+			"MINIMUM_AMOUNT": "Monto minimo",
+			"DELIVERY_FEE": "Gastos de envío",
+			"CANCEL": "Cancelar",
+			"ADD": "Añadir",
+			"EDIT": "Editar",
+			"ZONE_NAME": "Nombre de zona",
 			"ERRORS": {
 				"NAME_IS_REQUIRED": "Nombre de sucursal requerido",
 				"NAME_ATLEAST_3_CHARS": "El nombre debe tener al menos 3 caractéres",
