--- a/packages/admin-web-angular/src/assets/i18n/ru.json
+++ b/packages/admin-web-angular/src/assets/i18n/ru.json
@@ -449,6 +449,16 @@
 			"AUTO_DETECT_COORDINATES": "Автоматическое определение координат",
 			"CARRIERS": "Носители",
 			"USE_ONLY_SPECIFIC_CARRIERS": "Используйте только определенные носители",
+			"SELECT_SHAPE_TO_ADD_ZONE": "Выберите фигуру, чтобы добавить новую зону",
+			"CIRCLE": "Круг",
+			"SHAPE": "Форма",
+			"DRAW_SHAPE_ON_MAP": "Нарисуйте фигуру на карте",
+			"MINIMUM_AMOUNT": "Минимальная сумма",
+			"DELIVERY_FEE": "Стоимость доставки",
+			"CANCEL": "Отмена",
+			"ADD": "Добавить",
+			"EDIT": "Редактировать",
+			"ZONE_NAME": "Название зоны",
 			"ERRORS": {
 				"NAME_IS_REQUIRED": "Требуется имя склада",
 				"NAME_ATLEAST_3_CHARS": "Имя должно быть не менее 3 символов.",
